--- a/assets/less/sections/skills.less
+++ b/assets/less/sections/skills.less
@@ -14,6 +14,7 @@
     left: 0;
     width: 10px;
     box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.2);
+
     .skill-progress {
         position: absolute;
         border-radius: 3px;
@@ -43,7 +44,7 @@
     }
 }
 
-.skill-info {
+.skill-graded-info {
     margin-left: 15px;
     @media (max-width: @screen-phone) {
         margin-left: 20px;
